[package]
name = "solana-sample-app"
version = "0.1.0"
edition = "2018"
publish = false

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.6.9"
thiserror = "1.0.24"
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
arrayref = "0.3.6"
chrono = "0.4.19"

[lib]
crate-type = ["cdylib", "lib"]
